samples/_failures_safe/1761071412_676db1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57dd3ab6.c: In function ‘main’:
./samples/SAFE/__tmp_57dd3ab6.c:196:5: error: expected expression at end of input
  196 |     if (strlen(input) == 0)
      |     ^~
./samples/SAFE/__tmp_57dd3ab6.c:196:5: error: expected declaration or statement at end of input
